<resources>
    <string name="app_name">MessDL</string>

    // LogIn and SignUp

    <string name="title_activity_login">Log In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="Sign_up_long">New User? Sign Up Now</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">Skip</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_number">Enter Mobile Number</string>
    <string name="action_sign_in">Sign in or register</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_number">This mobile number is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="forgot_password">Forgot Password ?</string>
    <string name="mobile_num">Enter Mobile Number</string>
    <string name="number_india">+91</string>

    <string name="imeNextButton">next</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="sign_up_button">Sign Up</string>

    // Others
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_monday_lunch">MondayLunch</string>
    <string name="monday_01">Uttpam</string>
    <string name="monday_01_time">Monday@7:30am</string>
    <string name="monday_02">Chole Bature / Raita</string>
    <string name="monday_02_time">Monday@12:00pm</string>
    <string name="monday_03">Bhel Puri</string>
    <string name="monday_03_time">Monday@5:15pm</string>
    <string name="monday_04">Manchurian</string>
    <string name="monday_04_time">Monday@7:30pm</string>
    <string name="title_activity_monday_snacks">MondaySnacks</string>
    <string name="title_activity_monday_dinner">MondayDinner</string>
    <string name="title_activity_monday_breakfast">MondayBreakfast</string>
    <string name="title_activity_tuesday_breakfast">TuesdayBreakfast</string>
    <string name="tuesday_01">Chole Chulcha/Omelette</string>
    <string name="tuesday_01_time">Tuesday@7:30am</string>
    <string name="tuesday_02">Patta Gobie</string>
    <string name="tuesday_02_time">Tuesday@12:00pm</string>
    <string name="tuesday_03">Vada Pav</string>
    <string name="tuesday_03_time">Tuesday@5:15pm</string>
    <string name="tuesday_04">Dal Makhani/ MIx Veg</string>
    <string name="tuesday_04_time">Tuesday@7:30pm</string>
    <string name="title_activity_tuesday_lunch">TuesdayLunch</string>
    <string name="title_activity_tuesday_snacks">TuesdaySnacks</string>
    <string name="title_activity_tuesday_dinner">TuesdayDinner</string>
    <string name="title_activity_wednesday_breakfast">WednesdayBreakfast</string>
    <string name="title_activity_wednesday_lunch">WednesdayLunch</string>
    <string name="title_activity_wednesday_snacks">WednesdaySnacks</string>
    <string name="title_activity_wednesday_dinner">WednesdayDinner</string>
    <string name="title_activity_thursday_breakfast">ThursdayBreakfast</string>
    <string name="title_activity_thursday_lunch">ThursdayLunc</string>
    <string name="title_activity_thursday_snacks">ThursdaySnacks</string>
    <string name="title_activity_thursday_dinner">ThursdayDinner</string>
    <string name="title_activity_friday_lunch">FridayLunch</string>
    <string name="title_activity_friday_breakfast">FridayBreakfast</string>
    <string name="title_activity_friday_dinner">FridayDinner</string>
    <string name="title_activity_friday_snacks">FridaySnacks</string>
    <string name="title_activity_saturday_breakfast">SaturdayBreakfast</string>
    <string name="title_activity_saturday_lunch">SaturdayLunch</string>
    <string name="title_activity_saturday_dinner">SaturdayDinner</string>
    <string name="title_activity_saturday_snacks">SaturdaySnacks</string>
    <string name="title_activity_sunday_dinner">SundayDinner</string>
    <string name="title_activity_sunday_lunch">SundayLunch</string>
    <string name="title_activity_sunday_breakfast">SundayBreakfast</string>
    <string name="title_activity_sunday_snacks">SundaySnacks</string>
    <string name="wednesday_01">Poha/Egg</string>
    <string name="wednesday_01_time">Wednesday@7:30am</string>
    <string name="wednesday_02">Rajma/louki</string>
    <string name="wednesday_02_time">Wednesday@12:00pm</string>
    <string name="wednesday_03">Papdi Chat</string>
    <string name="wednesday_03_time">Wednesday@5:15pm</string>
    <string name="wednesday_04">Kofta</string>
    <string name="wednesday_04_time">Wednesday@7:30pm</string>
    <string name="thursday_01">SambarVada/Omelette</string>
    <string name="thursday_01_time">Thursday@7:30am</string>
    <string name="thursday_02">AalooPyaaz/ Kadi</string>
    <string name="thursday_02_time">Thursday@12:00pm</string>
    <string name="thursday_03">Mix Pakoda</string>
    <string name="thursday_03_time">Thursday@5:15pm</string>
    <string name="thursday_04">Paneer/ Besan Ladoo</string>
    <string name="thursday_04_time">Thursday@7:30pm</string>
    <string name="friday_01">Pav Bhaji/ Egg</string>
    <string name="friday_01_time">Friday@7:30am</string>
    <string name="friday_02">Arhr Dal/ Bhindi</string>
    <string name="friday_02_time">Friday@12:00pm</string>
    <string name="friday_03">Idli Fry</string>
    <string name="friday_03_time">Friday@5:15pm</string>
    <string name="friday_04">Navratan Korma</string>
    <string name="friday_04_time">Friday@7:30pm</string>
    <string name="saturday_01">Cutlet/ Egg</string>
    <string name="saturday_01_time">Saturday@8:00am</string>
    <string name="saturday_02">Mix Veg/ Arhr Dal</string>
    <string name="saturday_02_time">Saturday@12:00pm</string>
    <string name="saturday_03">Poha</string>
    <string name="saturday_03_time">Saturday@5:15pm</string>
    <string name="saturday_04">Aaloo Matar/ Pudi</string>
    <string name="saturday_04_time">Saturday@7:30pm</string>
    <string name="sunday_01">Samosa/ Omelette</string>
    <string name="sunday_01_time">Sunday@8:00am</string>
    <string name="sunday_02">Aaloo Parantha</string>
    <string name="sunday_02_time">Sunday@12:00pm</string>
    <string name="sunday_03">Veg. Sandwich</string>
    <string name="sunday_03_time">Sunday@5:15pm</string>
    <string name="sunday_04">Chana Masala</string>
    <string name="sunday_04_time">Sunday@7:30pm</string>
    <string name="title_activity_week">WeekActivity</string>
    <string name="title_activity_day_activity_monday">DayActivityMonday</string>
    <string name="title_activity_day_activity_tuesday">DayActivityTuesday</string>
    <string name="title_activity_day_activity_wednesday">DayActivityWednesday</string>
    <string name="title_activity_day_activity_thursday">DayActivityThursday</string>
    <string name="title_activity_day_activity_friday">DayActivityFriday</string>
    <string name="title_activity_day_activity_saturday">DayActivitySaturday</string>
    <string name="title_activity_day_activity_sunday">DayActivitySunday</string>
    <string name="text_breakfast">Breakfast</string>
    <string name="text_lunch">Lunch</string>
    <string name="text_snacks">Snacks</string>
    <string name="text_dinner">Dinner</string>
    <string name="monday_text">Monday</string>
    <string name="tuesday_text">Tuesday</string>
    <string name="wednesday_text">Wednesday</string>
    <string name="thursday_text">Thursday</string>
    <string name="friday_text">Friday</string>
    <string name="saturday_text">Saturday</string>
    <string name="sunday_text">Sunday</string>
    <string name="Home">Home</string>
    <string name="About_Us">About Us</string>
    <string name="title_activity_about_us">AboutUs</string>

    <string name="title_activity_first_page">FirstPage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
