<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.devilcity.messdl.LoginActivity"
    android:weightSum="1"
    android:background="#ffffff">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.95"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_weight="15"
                    android:text="@string/number_india"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/mobile_num"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_number"
                    android:imeActionId="@+id/next"
                    android:imeActionLabel="@string/imeNextButton"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number|phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="85"
                    android:textSize="20sp" />
            </LinearLayout>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/log_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="20sp" />

            <Button
                style="?android:textAppearanceSmall"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/log_in"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:id="@+id/log_in_button"
                android:background="#39a344"
                android:onClick="logInRegister" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/forgot_password"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Sign_up_long"
                android:id="@+id/textView"
                android:paddingTop="210dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
