<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.devilcity.messdl.DayActivityFriday">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/background"
        android:scaleType="fitXY" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/breakfast_button"
        android:layout_marginTop="49dp"
        android:text="@string/text_breakfast"
        android:onClick="breakfastClick"
        android:width="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_lunch"
        android:id="@+id/lunch_button"
        android:layout_below="@+id/breakfast_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="lunchClick"
        android:width="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_snacks"
        android:id="@+id/snacks_button"
        android:layout_below="@+id/lunch_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="snacksClick"
        android:width="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dinner"
        android:id="@+id/dinner_button"
        android:layout_below="@+id/snacks_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="dinnerClick"
        android:width="200dp" />

</RelativeLayout>
