<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.devilcity.messdl.FirstPage">


    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/log_in"
        android:id="@+id/log_in_button"
        android:layout_marginBottom="122dp"
        android:background="#EF6C00"
        android:textColor="#000000"
        android:textSize="30dp"
        android:padding="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:onClick="onClick" />

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:id="@+id/sign_up_button"
        android:background="#EF6C00"
        android:textColor="#000000"
        android:textSize="30dp"
        android:padding="8dp"
        android:layout_alignTop="@+id/log_in_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:onClick="onClick" />

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/skip"
        android:id="@+id/skip_button"
        android:layout_below="@+id/sign_up_button"
        android:layout_centerHorizontal="true"
        android:background="#EF6C00"
        android:textColor="#000000"
        android:layout_marginTop="40dp"
        android:textSize="30dp"
        android:padding="8dp"
        android:onClick="onClick" />
</RelativeLayout>
